# ts-client

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  benchmark_ttft.py  dependencies.txt  final_dependencies.txt  pyproject.toml  requirements.txt  resolved_dependencies.txt  setup.py  test100.py  test1000.py  test_package.py
.cursor/rules/: changelog-rule.mdc  code-changes.mdc
examples/: README.md
examples/configuration/: config_patterns.py
examples/integration/: comprehensive_demo.py  stt_to_tts.py
examples/stt/: README.md  basic.py  file.py  multilingual.py  test-stt.py
examples/tts/: README.md  basic.py  save_file.py  silent.py
python/: README.md  client.py  client100.py  requirements.txt  setup.py
python/ts_live/: client.py
python/ts_live.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tsclient/: __init__.py  client.py  ts_live
talkscriber/stt/: batch_client.py  cli.py
talkscriber/tests/: README.md  __init__.py  conftest.py
talkscriber/tests/tts/: __init__.py  test_tts_maya.py
talkscriber/tts/: cli.py  client.py
talkscriber_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ts_live/: Makefile  pyproject.toml  requirements.txt  setup.cfg
ts_live/tests/: test_client.py
tsclient.egg-info/: PKG-INFO  SOURCES.txt
tts/: README.md  requirements.txt  simple_client.ipynb  simple_client.py
tts/client/: tts_client.py
