[metadata]
name = tsclient
version = attr: tsclient.__version__
description = A real-time transcription client
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/tsclient
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8,<3.9
install_requires =
    numpy>=1.24.3,<1.25.0
    ffmpeg-python==0.2.0
    future==0.18.3
    mkl-fft==1.3.1
    mkl-random==1.2.2
    mkl-service==2.4.0

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
max-line-length = 88
extend-ignore = E203 